--- a/flows_and_derivations.tex
+++ b/flows_and_derivations.tex
@@ -209,3 +209,49 @@ whose flow is $\phi$.
 \begin{theorem}
 Given a derivation $\Phi$ with associated flow $\phi$, $|\Phi|\leq|\phi|^3$.
 \end{theorem}
+
+\section{Normal Forms of Derivations}
+
+\TODO{Ensure that all the normal forms of atomic flows have a corresponding definition for derivations.}
+
+\begin{definition}
+A derivation with associated atomic flow $\phi$ is \emph{weakly streamlined} (resp., \emph{streamlined}, \emph{super streamlined} and \emph{hyper streamlined}) if $\phi$ is \emph{weakly streamlined} (resp., \emph{streamlined}, \emph{super streamlined} and \emph{hyper streamlined}).
+\end{definition}
+
+\begin{definition}\label{DefDerCore}
+A derivation $\vlder{\Phi}{}{\beta}{\alpha}$ with associated atomic flow $\phi$, such that $\phi_1$, $\dots$, $\phi_n$ are all the non-weakly-streamlined, connected subflows of $\phi$, a \emph{core of\/ $\Phi$} is defined to be a derivation
+\[
+\vlder{}{}{\vls[\beta.(a^{\mu'_n}_n.{\bar a^{\mu''_n}_n}).\cdots.(a^{\mu'_1}_1.{\bar a^{\mu'_1}_1})]}{\vls([a^{\lambda'_1}_1.{\bar a^{\lambda''_1}_1}].\cdots.[a^{\lambda'_n}_n.{\bar a^{\lambda'_n}_n}].\alpha)}
+\]
+with associated atomic flow $\Core(\phi)$, such that, for every $1\le i\le n$, $\lambda'_i$ and $\lambda''_i$ (resp., $\mu'_i$ and $\mu''_i$) are the new upper (resp., lower) edges of $\phi_i$.
+\end{definition}
+
+\begin{theorem}\label{ThmExistCore}
+Given a derivation $\vlder{\Phi}{}{\beta}{\alpha}$, a core of\/ $\Phi$ can be constructed.
+\end{theorem}
+
+\begin{proof}
+Let $\phi$ be the atomic flow of $\Phi$ and label the sublfows of $\phi$ as in Definition~\ref{DefFlowCore}. Let atom occurrences of the atoms $a_1,\dots,a_n$ map to edges in the subflows $\phi_1,\dots,\phi_n$ respectively, let atom occurrences of the atoms $b_1,\dots,b_k$ map to edges in the subflow $\psi_2$ and let atom occurrences of the atoms $c_1,\dots,c_l$ map to edges in the subflow $\psi_3$. Then we build a core of $\Phi$ as follows:
+\[
+\vlderivation
+{
+ \vlde{\Psi_2}{\{\acd,\med\}}{\vls[\beta.(a_n.{\bar a_n}).\cdots.(a_1.{\bar a_1})]}
+ {
+  \vlde{\Phi'}{\SKS\setminus\{\aid,\aiu\}}{{\vlsbr[\beta\;.\;\vlinf{}{}{\fff}{\vls(c_l.\bar c_l)}\;.\;\cdots\;.\;\vlinf{}{}{\fff}{\vls(c_1.\bar c_1)}\;.\;(a_n.\bar a_n)\;.\;\cdots\;.\;(a_n.\bar a_n)\;.\;\cdots\;.\;(a_1.\bar a_1)\;.\;\cdots\;.\;(a_1.\bar a_1)]}}
+  {
+   \vlde{\Psi_1}{\{\acu,\med\}}{{\vlsbr([a_1.\bar a_1]\;.\;\cdots\;.\;[a_1.\bar a_1]\;.\;\cdots\;.\;[a_n.\bar a_n]\;.\;\cdots\;.\;[a_n.\bar a_n]\;.\;\vlinf{}{}{\vls[b_1.\bar b_1]}{\ttt}\;.\;\cdots\;.\;\vlinf{}{}{\vls[b_k.\bar b_k]}{\ttt}\;.\;\alpha)}}
+   {
+    \vlhy{\vls([a_1.{\bar a_1}].\cdots.[a_n.{\bar a_n}].\alpha)}
+   }
+  }
+ }
+}\quad,
+\]
+where $\Phi'$ exists by Lemma~\ref{LemDecompInt} and $\Psi_1$ and $\Psi_2$ exist by Lemma~\ref{LemGenericContraction}. By studying the proofs of Lemma~\ref{LemDecompInt} and Lemma~\ref{LemGenericContraction}, we can observe that the derivation has atomic flow $\Core(\phi)$.
+\end{proof}
+
+%TODO: by the above remarks it is obvious how this is unique, but maybe we should make a final remark?
+
+\begin{definition}
+Given a derivation $\Phi$, the core of $\Phi$ obtained as described in the proof of Theorem~\ref{ThmExistCore} is called \emph{the core of\/ $\Phi$}, denoted $\Core(\Phi)$.
+\end{definition}
