--- a/formalism.tex
+++ b/formalism.tex
@@ -6,10 +6,13 @@
 An \emph{inference rule instance}, $\vlinf{\rho}{}{\beta}{\alpha}$, consists of two formulae, $\alpha$ and $\beta$, called \emph{premiss} and \emph{conclusion} respectively.
 \end{definition}
 
+\TODO{Make the label on the derivation in item 2 smaller.}
+
 \begin{definition}
 Fix a set of formulae, a set of inference rule instances and a set of logical connectives, then a \emph{(Formalism A) derivation $\vlder{\Psi}{}{\beta}{\alpha}$ from (the formula) $\alpha$ to (the formula) $\beta$}, is defined to be
 \begin{enumerate}
  \item a formula, $\Psi=\alpha=\beta$;
+
  \item a vertical composition
  \[
  \Psi\;=\;
@@ -23,6 +26,8 @@ Fix a set of formulae, a set of inference rule instances and a set of logical co
  where $\circ$ is an $n$-ary logical connective, $\alpha=\circ(\alpha_1,\dots,\alpha_n)$, $\beta=\circ(\beta_1,\dots,\beta_n)$ and $\vlder{\Phi_1}{}{\beta_1}{\alpha_1}$, $\dots$, $\vlder{\Phi_n}{}{\beta_n}{\alpha_n}$ are derivations.
 \end{enumerate}
 \end{definition}
+
+\TODO{State that we consider derivations equal modulo associativity of vertical composition.}
 
 \begin{lemma}\label{LemDerComp}
 Given two derivations $\vlder{\Phi_1}{}{\beta}{\alpha}$ and $\vlder{\Phi_2}{}{\gamma}{\beta}$, a derivation $\vlder{\Phi_1;\Phi_2}{}{\gamma}{\alpha}$ can be constructed.
@@ -83,8 +88,12 @@ is unique.
 
 \section{Comparison with the Calculus of Structures}
 
+\TODO{Double check the following definition, that it is in line with Paola and and Alessio's complexity paper.}
+
 \newcommand{\size}[1]{{\left\vert #1\right\vert}}\vlupdate\size
+\begin{definition}
 The \emph{size} $\size\alpha$ of a formula $\alpha$, and the \emph{size} $\size\Phi$ of a derivation $\Phi$, is the number of unit and atom occurrences appearing in it.
+\end{definition}
 
 \begin{theorem}
 Formalism A p-simulates the calculus of structures and the calculus of structures p-simulates Formalism A.
