Changed TODO about identity of atomic flows.

--- a/flows.tex
+++ b/flows.tex
@@ -112,7 +112,7 @@ Given an atomic flow $\phi$, we say that the sets $L_\top=\{\epsilon_1,\dots,\ep
                                 {\scriptstyle\mathbf9}
                                 {\scriptscriptstyle\mathbf9}}}
 
-\TODO{Make sure we define atomic flows to be unique modulo associativity of contraction.}
+\TODO{Make sure we define atomic flows modulo associativity of contraction and graph isomorphism.}
 
 \TODO{Define \emph{paths}, \emph{$\aid$-paths} and `\emph{super paths}'.}
 
