Moved definition of Gamma to where it should be and put a temp definition of generic weakening.

--- a/defs.tex
+++ b/defs.tex
@@ -31,10 +31,13 @@
 
 %TODO: put this somewhere clever:
 
-\newcommand{\Gammasf}{\mathsf\Gamma}
 \newcommand{\avecletter}{{\boldsymbol a}}
 \newcommand{\avec}[2]{\avecletter_{#1}^{#2}}
 \newcommand{\bvecletter}{{\boldsymbol b}}
 \newcommand{\bvec}[2]{\bvecletter_{#1}^{#2}}
 \newcommand{\Ord}[1]{{\mathsf O}(#1)}
-\newcommand{\Gth}[3]{\mathop{\Gammasf_{#1,#2}^{#3}}}
+
+%TODO: define this
+\newcommand{\weaken}{\mathsf{w}}
+\newcommand{\gwu}{{\weaken{\uparrow}}}
+\newcommand{\gwd}{{\weaken{\uparrow}}}
