--- a/cut_elimination.tex
+++ b/cut_elimination.tex
@@ -1,2 +1,372 @@
 \chapter{Cut Elimination}
-\section{Propositional Classical Logic}
+
+\TODO{Redo this so that it is in line with how $\Core$ is defined.}
+
+\TODO{Integrate this section with the rest of the thesis. In particular do it in terms of weak cut-elimination, which will make it much more elegant.}
+
+\newcommand{\Exp}{\mathsf{Exp}}
+
+\begin{proposition}
+Given a proof, $\Phi$, with atomic flow
+\[
+A=
+\atomicflow
+{
+(-18, 0)*{\affr{8}{8}};
+(-16, 2)*{a_1};
+(-21,-6)*{\afvjm4};
+%
+(-13,8)*{\afaidm{}{}{}{}{}{}};
+(-13,-8)*{\afaium{}{}{}{}{}{}};
+%
+( -8, 0)*{\affr{8}{8}};
+( -6, 2)*{\bar a_1};
+( -5,-6)*{\afvjm4};
+%------------
+(0,0)*{\cdots};
+%------------
+( 8, 0)*{\affr{8}{8}};
+(10, 2)*{a_n};
+( 5,-6)*{\afvjm4};
+%
+(13,8)*{\afaidm{}{}{}{}{}{}};
+(13,-8)*{\afaium{}{}{}{}{}{}};
+%
+(18, 0)*{\affr{8}{8}};
+(20, 2)*{\bar a_n};
+(21,-6)*{\afvjm4};
+}\quad,
+\]
+the atomic flow associated with an experiment on $\Phi$ with respect to $a_1,\dots,a_n$ is
+\[
+\Exp(A)=
+\atomicflow
+{
+( -8,16)*{\afvj4};
+( -8,10)*{\affr{8}{8}};
+( -8,10)*{\copy\contrup};
+( -8, 5)*{\afvjm2};
+( -8, 0)*{\affr{8}{8}};
+( -6, 2)*{a_1};
+(-11,-6)*{\afvjm4};
+( -5,-8)*{\afawum{}{}{}{}};
+%------------
+(0,5)*{\cdots};
+%------------
+( 8,16)*{\afvj4};
+( 8,10)*{\affr{8}{8}};
+( 8,10)*{\copy\contrup};
+( 8, 5)*{\afvjm2};
+( 8, 0)*{\affr{8}{8}};
+(10, 2)*{a_n};
+( 5,-8)*{\afawum{}{}{}{}};
+(11,-6)*{\afvjm4};
+%------------
+(18,-4)*{\afawdm{}{}{}{\bar a_1}};
+%------------
+(22,-5)*{\cdots};
+%------------
+(26,-4)*{\afawdm{}{}{}{\bar a_n}};
+}\quad,
+\]
+where the subflow of $A$ labelled $a_i$ is isomorphic to the subflow of\/ $\Exp(A)$ labelled $a_i$ for every $1\leq i\leq n$.
+\end{proposition}
+
+In other words, $\Exp(\Phi,a_1,\dots,a_n)$ is not unique, but the atomic flow associated with it is unique modulo associativity of contraction.
+
+\begin{remark}\label{RemExperimentExistence}
+The weakening reductions presented in \cite{GuglGund:07:Normalis:lr} gives us another approach to obtaining an experiment on $\Phi$ with respect to $a_1,\dots,a_n$:
+
+Simply consider the derivation
+\[
+\vlder{\Core(\Phi)}{}{\vls[\beta.\vlinf{\aiu}{}{\fff}{\vls(a_1.\bar a_1)}.\cdots.\vlinf{\aiu}{}{\fff}{\vls(a_n.\bar a_n)}]}{\vls([a_1.\vlinf{\awd}{}{\bar a_1}{\fff}].\cdots.[a_n.\vlinf{\awd}{}{\bar a_n}{\fff}])}\quad,
+\]
+with atomic flow
+\[
+\atomicflow
+{
+(-18,16)*{\afvj4};
+(-18,10)*{\affr{8}{8}};
+(-18,10)*{\copy\contrup};
+(-18, 5)*{\afvjm{2}};
+(-18, 0)*{\affr{8}{8}};
+(-16, 2)*{a_1};
+(-21,-12)*{\afvjm{16}};
+(-17,-10)*{\affr{6}{8}};
+(-17,-10)*{\copy\contrdown};
+(-17, -5)*{\afvjm{2}};
+%
+(-13,-18)*{\afaiu{}{}{}{}{}{}};
+%
+( -8,18)*{\afawd{}{}{}{}};
+( -8,10)*{\affr{8}{8}};
+( -8,10)*{\copy\contrup};
+( -8, 5)*{\afvjm{2}};
+( -8, 0)*{\affr{8}{8}};
+( -6, 2)*{{\bar a}_1};
+( -9,-10)*{\affr{6}{8}};
+( -9,-10)*{\copy\contrdown};
+( -9, -5)*{\afvjm{2}};
+( -5,-12)*{\afvjm{16}};
+%------------
+(0,0)*{\cdots};
+%------------
+( 8,16)*{\afvj4};
+( 8,10)*{\affr{8}{8}};
+( 8,10)*{\copy\contrup};
+( 8, 5)*{\afvjm{2}};
+( 8, 0)*{\affr{8}{8}};
+( 6, 2)*{a_n};
+( 9,-10)*{\affr{6}{8}};
+( 9,-10)*{\copy\contrdown};
+( 9, -5)*{\afvjm{2}};
+( 5,-12)*{\afvjm{16}};
+%
+(13,-18)*{\afaiu{}{}{}{}{}{}};
+%
+(18,18)*{\afawd{}{}{}{}};
+(18,10)*{\affr{8}{8}};
+(18,10)*{\copy\contrup};
+(18, 5)*{\afvjm{2}};
+(18, 0)*{\affr{8}{8}};
+(16, 2)*{{\bar a}_n};
+(21,-12)*{\afvjm{16}};
+(17,-10)*{\affr{6}{8}};
+(17,-10)*{\copy\contrdown};
+(17, -5)*{\afvjm{2}};
+}\quad,
+\]
+and apply weakening reductions until a derivation with the desired atomic flow is obtained.
+\end{remark}
+
+Given all the possible truth value assignments to a set of atoms, \emph{i.e.} the premisses of all the experiments on a proof, we know that one of them is true, so there must be a proof of their disjunction.
+
+% TODO: big remark or section on philosophy
+% TODO: remark on symmetry/confluence
+
+\newcommand{\Assignments}{\mathcal A}
+\newcommand{\Sym}{\mathsf{Sym}}
+
+\begin{definition}\label{DefSymmetricProof}
+Given distinct and pairwise non-dual atoms, $a_1,\dots,a_n$, define
+\begin{itemize}
+\item the set $\Assignments_k=\{\{b_1,\dots,b_k\}|b_i\in\{a_i,\bar a_i\}\}$ for $1\leq k\leq n$ and
+\item a \emph{symmetric proof of }$\bigvee_{\{b_1,\dots,b_k\}\in\Assignments_k}\vlsbr(b_1.\cdots.b_n)$, denoted $\Sym(a_1,\dots,a_k)$, by induction on $k$:
+
+The base case is
+\[
+\Sym(a_1)=\vlinf{\aid}{}{\vls[a_1.\bar a_1]}{\ttt}\quad,
+\]
+and the inductive case is
+\[
+\newbox\DerCap
+\setbox\DerCap=
+\hbox{$
+\vlderivation
+{
+ \vlde{}{\{\acu,\med\}}{\bigwedge_{i=1}^{2^{k-1}}[b_k.\bar b_k]}
+ {
+  \vlin{\aid}{}{\vls[b_k.\bar b_k]}
+  {
+   \vlhy{\ttt}
+  }
+ }
+}$
+}
+\newbox\DerCap
+\setbox\DerCap=
+\hbox{$
+\vlderivation
+{
+ \vlde{}{\{\acu,\med\}}{\bigwedge_{i=1}^{2^{k-1}}\vls[b_k.\bar b_k]}
+ {
+  \vlin{\aid}{}{\vls[b_k.\bar b_k]}
+  {
+   \vlhy{\ttt}
+  }
+ }
+}$
+}
+\Sym(a_1,\dots,a_k)\quad=\quad
+\vlderivation
+{
+ \vlin{=}{}{\bigvee_{\{b_1,\dots,b_k\}\in \Assignments_k}\vlsbr(b_1.\cdots.b_k)}
+ {
+  \vlde{}{\{\swi\}}{\bigvee_{\{b_1,\dots,b_{k-1}\}\in \Assignments_{n-1}}\vlsbr[(b_1.\cdots.b_{k-1}.b_n).(b_1.\cdots.b_{k-1}.\bar b_k)]}
+  {
+  \vlpr{\Sym(a_1,\dots,a_{k-1})}{\{\aid,\acu,\swi,\med\}}{\vlsbr(\box\DerCap.\bigvee_{\{b_1,\dots,b_{k-1}\}\in \Assignments_{k-1}}(\vlinf{\acu}{}{\vls(b_1.b_1)}{b_1}.\cdots.\vlinf{\acu}{}{\vls(b_{k-1}.b_{k-1})}{b_{k-1}}))}
+  }
+ }
+}\quad,
+\]
+for $1 < k \leq n$.
+\end{itemize}
+\end{definition}
+
+From the point of view of atomic flows this proof is symmetric. That is, the atomic flows of each of the atoms are pairwise isomorphic. When building the proof we have to choose which atom to eliminate first, but the atomic flows forget this choice:
+
+\begin{proposition}
+The atomic flow associated with $\Sym(a_1,\dots,a_n)$ is
+\[
+\atomicflow
+{
+(-13, 8)*{\afaid{}{}{}{}{}{}};
+(-18, 0)*{\affr{8}{8}};
+(-18, 0)*{\copy\contrup};
+(-16, 2)*{a_1};
+( -8, 0)*{\affr{8}{8}};
+( -8, 0)*{\copy\contrup};
+( -6, 2)*{\bar a_1};
+(-18,-6)*{\afvjm{4}};
+( -8,-6)*{\afvjm{4}};
+%------------
+(0,0)*{\cdots};
+%------------
+(13, 8)*{\afaid{}{}{}{}{}{}};
+( 8, 0)*{\affr{8}{8}};
+( 8, 0)*{\copy\contrup};
+(10, 2)*{a_n};
+(18, 0)*{\affr{8}{8}};
+(18, 0)*{\copy\contrup};
+(20, 2)*{\bar a_n};
+( 8,-6)*{\afvjm{4}};
+(18,-6)*{\afvjm{4}};
+}\quad.
+\]
+\end{proposition}
+
+In other words, $\Sym(a_1,\dots,a_n)$ is not unique, but the atomic flow associated with it is unique modulo associativity of contraction.
+
+Finally we build a cut-free proof. The idea is `consider every truth value assignment to the atoms in $\Phi$ and prove that $\beta$ holds for each of them'.
+
+\begin{definition}
+Given a proof, $\vlproof{\Phi}{}{\beta}$, where the distinct and non-dual atoms $a_1,\dots,a_n$ and their duals are all the atoms that occur, \emph{a symmetric cut-free proof obtained from $\Phi$} is:
+\[
+\vlderivation
+{
+ \vlin{(2^n-1)\times\cod}{}{\beta}
+ {
+  \vlpr{\Sym(a_1,\dots,a_n)}{\{\aid,\acu,\swi,\med\}}{\bigvee_{\{b_1,\dots,b_n\}\in\Assignments_n}\left(\vlder{\Exp(\Phi,b_1,\dots,b_n)}{\SKS\setminus\{\aid,\aiu\}}{\beta}{\vls(b_1.\cdots.b_n)}\right)}
+ }
+}\quad.
+\]
+\end{definition}
+
+Finally we observe that the atomic flow of the cut-free proof can be uniquely determined, modulo associativity of contractions, given the atomic flow of the original proof, and in this sense the normalisation procedure is confluent.
+
+\begin{proposition}\label{ProUniqueCutFreeFlow}
+Given a proof $\Phi$ with atomic flow
+\[
+A=
+\atomicflow
+{
+(-18, 0)*{\affr{8}{8}};
+(-16, 2)*{a_1};
+(-21,-6)*{\afvjm4};
+%
+(-13,8)*{\afaidm{}{}{}{}{}{}};
+(-13,-8)*{\afaium{}{}{}{}{}{}};
+%
+( -8, 0)*{\affr{8}{8}};
+( -6, 2)*{\bar a_1};
+( -5,-6)*{\afvjm4};
+%------------
+(0,0)*{\cdots};
+%------------
+( 8, 0)*{\affr{8}{8}};
+(10, 2)*{a_n};
+( 5,-6)*{\afvjm4};
+%
+(13,8)*{\afaidm{}{}{}{}{}{}};
+(13,-8)*{\afaium{}{}{}{}{}{}};
+%
+(18, 0)*{\affr{8}{8}};
+(20, 2)*{\bar a_n};
+(21,-6)*{\afvjm4};
+}\quad,
+\]
+the atomic flow associated with a symmetric cut-free proof obtained from $\Phi$ is
+\[
+\atomicflow
+{
+(-27,18)*{\afaid{}{}{}{}{}{}};
+%----
+(27,18)*{\afaid{}{}{}{}{}{}};
+%--------
+(-38,10)*{\affr{20}8};
+(-38,10)*{\copy\contrup};
+(-16,10)*{\affr{20}8};
+(-16,10)*{\copy\contrup};
+%----
+(16,10)*{\affr{20}8};
+(16,10)*{\copy\contrup};
+(38,10)*{\affr{20}8};
+(38,10)*{\copy\contrup};
+%--------
+(-44,5)*{\afvjm2};
+(-32,5)*{\afvjm2};
+(-22,5)*{\afvjm2};
+(-10,5)*{\afvjm2};
+%----
+(10,5)*{\afvjm2};
+(22,5)*{\afvjm2};
+(33,5)*{\afvjm2};
+(44,5)*{\afvjm2};
+%--------
+(-44,0)*{\affr88};
+(-42,2)*{a_1};
+(-38,0)*{\vldots};
+(-32,0)*{\affr88};
+(-30,2)*{a_1};
+(-22,0)*{\affr88};
+(-20,2)*{\bar a_1};
+(-16,0)*{\vldots};
+(-10,0)*{\affr88};
+(-8,2)*{\bar a_1};
+%----
+(0,0)*{\vldots};
+%----
+(10,0)*{\affr88};
+(12,2)*{a_n};
+(16,0)*{\vldots};
+(22,0)*{\affr88};
+(24,2)*{a_n};
+(32,0)*{\affr88};
+(34,2)*{\bar a_n};
+(38,0)*{\vldots};
+(44,0)*{\affr88};
+(46,2)*{\bar a_n};
+%--------
+(-50,-2)*{\afawdm{}{}{}{}};
+(-44,-5)*{\afvjm2};
+(-32,-5)*{\afvjm2};
+(-22,-5)*{\afvjm2};
+(-10,-5)*{\afvjm2};
+(-4,-2)*{\afawdm{}{}{}{}};
+%----
+(4,-2)*{\afawdm{}{}{}{}};
+(10,-5)*{\afvjm2};
+(22,-5)*{\afvjm2};
+(32,-5)*{\afvjm2};
+(44,-5)*{\afvjm2};
+(50,-2)*{\afawdm{}{}{}{}};
+%--------
+(-40,-10)*{\affr{24}8};
+(-40,-10)*{\copy\contrdown};
+(-14,-10)*{\affr{24}8};
+(-14,-10)*{\copy\contrdown};
+%----
+(14,-10)*{\affr{24}8};
+(14,-10)*{\copy\contrdown};
+(40,-10)*{\affr{24}8};
+(40,-10)*{\copy\contrdown};
+%--------
+(-40,-16)*{\afvjm4};
+(-14,-16)*{\afvjm4};
+%----
+(14,-16)*{\afvjm4};
+(40,-16)*{\afvjm4};
+}\quad,
+\]
+where the subflow of the former atomic flow labelled $a_i$ (resp., $\bar a_i$) is isomorphic to the subflow of the latter atomic flow labelled $a_i$ (resp., $\bar a_i$) for every $1\leq i\leq n$ and the subflows labelled with contraction vertices are unique modulo associativity of contraction by Remark~\ref{RemUniquGenContr}.
+\end{proposition}
